overflow ui bug fix

--- a/FoodBlogApp/src/assets/css/paper-dashboard.css
+++ b/FoodBlogApp/src/assets/css/paper-dashboard.css
@@ -3378,6 +3378,14 @@ Copyright (c) 2015 Daniel Eden
     display: none !important;
   }
 
+  body > .nav-open > .sidebar-wrapper {
+    display: none !important;
+  }
+
+  body >  .sidebar-wrapper {
+    display: block !important;
+  }
+
   .card form [class*="col-"] {
     padding: 6px;
   }
@@ -3601,6 +3609,9 @@ Copyright (c) 2015 Daniel Eden
     left: -230px;
   }
 
+  body{
+    overflow: hidden;
+  }
   .nav-open .wrapper {
     left: 0;
     -webkit-transform: translate3d(-230px, 0, 0);
