--- a/FoodBlogApp/src/assets/sass/paper/_sidebar-and-main-panel.scss
+++ b/FoodBlogApp/src/assets/sass/paper/_sidebar-and-main-panel.scss
@@ -201,5 +201,5 @@
   transition-duration: .2s, .2s;
   -webkit-transition-timing-function: linear, linear;
   transition-timing-function: linear, linear;
-  -webkit-overflow-scrolling: touch;
+  // -webkit-overflow-scrolling: touch;
 }
